--- a/css/portfolio_bow_tip.css
+++ b/css/portfolio_bow_tip.css
@@ -3,6 +3,40 @@
 /***********************/
 /*TABLET-IPAD(portrait)*/
 /***********************/
+
+@media (min-width: 896px) and (max-width: 1024px){
+    #bodywrapper{
+        height: 75%;
+    }
+    .gridwrapper_content{
+        margin-top:20%;
+    }
+    .nav li {
+        margin: 0 2em;
+    }
+    .myname{
+        font-size: 3.3em;
+    }
+} /*max-width 1024px ends*/
+
+@media (min-width: 768px) and (max-width: 896px){
+    #bodywrapper{
+        height: 80%;
+    }
+    .gridwrapper_content{
+        margin-top:30%;
+    }
+    .nav li {
+        margin: 0 1em;
+    }
+    .myname{
+        font-size:2.5em;
+    }
+    .aboutme{
+        margin-right:2em;
+    }
+} /*max-width 1024px ends*/
+
 @media (min-width: 768px) and (max-width: 1024px) {
     .my_background{
         /*background-image: url('../images/redefinebackground.jpg');*/
@@ -26,19 +60,19 @@
     
     #bodywrapper{
         padding:2.5em;
-        height: auto;
+        /*height: 80%;*/
     }
     
     .gridwrapper{
         width:100%;
         display: grid;
-        grid-template-columns: 20% 20% 20% 20% 20%;
+        grid-template-columns: 20% 20% 20% 20% 15%;
     }
     
     .box{
         /*background-color:pink;
         border:solid 1px black;*/
-        padding:10px 0;
+        padding: 5px 0;
     }
     
     .header_welcome{
@@ -67,7 +101,7 @@
         grid-row: 2;
         grid-template-columns: 20% 20% 20% 20% 20%;
         display: grid;
-        margin-top: 30%;
+        /*margin-top: 30%;*/
     }
     
     .gridwrapper_info{
@@ -82,7 +116,7 @@
     }
     
     #logo_image img{
-        width: 80%;
+        width: 100%;
         height:auto;
         margin-right: 10px;
     }
@@ -93,13 +127,13 @@
     
     .myname{
         grid-column: 1/3;
-        font-size: 2.5em;
+        /*font-size: 2.5em;*/
         font-weight: bold;
     }
     
     .aboutme, .contact{
         padding: 10px 0;
-        width: 8em;
+        width: 9em;
         text-align: center;
         vertical-align: baseline;
     }
@@ -128,9 +162,9 @@
     }
     
     .nav{
-        width: 100%;
+        width: 95%;
         position: absolute;
-        bottom: 2em;
+        /*bottom: 2em;*/
         padding: 2% 0;
         margin: auto;
         text-align: center;
@@ -140,7 +174,7 @@
     .nav li{
         display: inline;
         padding: 0 2em;
-        margin: 0 1em;
+        /*margin: 0 1em;*/
         font-weight: bold;
     }
     
