Mobile Css update
Portrait Css for mobile

--- a/css/portfolio_bow.css
+++ b/css/portfolio_bow.css
@@ -189,6 +189,10 @@ body, html{
 #video, #projects, #logo, #type, #animate, #sound{
     border-bottom:solid 2px black;
 }
+
+button.dropbtn{
+    display: none;
+}
 }/*@Media (min-width: 1281px)*/
 
 
