--- a/css/portfolio_bow_mp.css
+++ b/css/portfolio_bow_mp.css
@@ -4,5 +4,223 @@
 /*MOBILE(landscape)*/
 /************************/
 @media (min-width: 320px) and (max-width: 480px) {
+body, html{
+    height: 100%;
+    margin: 0;
+    font-family: Arial,Helvetica Neue,Helvetica,sans-serif; 
+}
 
+.my_background{
+    background-image: url('../images/redefinebackground.jpg');
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+/*******/
+/*GRID*/
+/*******/
+.wrapper_body{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+}
+
+#bodywrapper{
+    padding:1em;
+    height: auto;
+}
+
+.gridwrapper{
+    width:100%;
+    display: grid;
+    /*grid-template-columns: 20% 20% 20% 20% 20%;*/
+}
+
+.box{
+    /*background-color:pink;
+    border:solid 1px black;*/
+    padding:4px 0;
+}
+
+.header_welcome{
+    /*grid-row: 1;*/
+    font-size:12px;
+    font-weight: bold;
+}
+
+.header_pagename{
+    grid-column: 5;
+    grid-row: 1;
+    font-size:10px;
+    text-align: right;
+}
+
+.header_pagename img{
+    width: 8%;
+    height: auto;
+}
+
+.socialmedia img{
+    width:1.5em;
+    padding: .5em;
+}
+
+.gridwrapper_content{
+    grid-row: 2;
+    /*grid-template-columns: 20% 20% 20% 20% 20%;*/
+    /*display: grid;*/
+    margin-top: 10%;
+}
+
+.gridwrapper_info{
+    /*display: grid;
+    grid-column: 3/6;*/
+    text-align: center;
+    margin-top: 2em;
+}
+/*
+.mylogo{
+    grid-row: 1;
+    grid-column: 1/3;
+    text-align: right;
+}
+*/
+#logo_image img{
+    width: 80%;
+    height:auto;
+    margin: auto;
+    /*margin-right: 10px;*/
+}
+
+ p#logo_image{
+    text-align: center;
+ }
+
+.mytitle{
+    font-style: italic;
+}
+
+.myname{
+    /*grid-column: 1/3;*/
+    font-size: 1.7em;
+    font-weight: bold;
+}
+
+.aboutme, .contact{
+    padding: 15px 0;
+    width: 13em;
+    text-align: center;
+    margin: auto;
+    vertical-align: baseline;
+}
+
+.aboutme{
+    background-color: white;
+    color: black;
+    border: solid 1.5px black;
+}
+
+.aboutme:hover{
+    background-color:rgb(211, 211, 211);
+}
+
+.contact{
+    /*grid-column: 2/3;
+    margin-right: 15em;*/
+    background-color: black;
+    color: white;
+    border: 1.5px solid black;
+}
+
+.contact:hover{
+    background-color:rgb(211, 211, 211);
+    color: black;
+}
+
+/*
+.nav{
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    padding: 2% 0;
+    margin: auto;
+    text-align: center;
+    font-size: 10px;
+}
+*/
+
+/*
+.nav li{
+    display: inline;
+    padding: 0 2em;
+    margin: 25px;
+    font-weight: bold;
+}
+
+#video, #projects, #logo, #type, #animate, #sound{
+    border-bottom:solid 2px black;
+}*/
+
+
+.dropbtn {
+    background-color: black;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    /*cursor: pointer;*/
+    width:100%;
+    text-align: right;
+    width: 100%;
+}
+/*
+.dropbtn:hover, .dropbtn:focus {
+    background-color: pink;
+}
+*/
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: white;
+    min-width: auto;
+    overflow: auto;
+    box-shadow: -1px -1px 25px 0.5px rgba(0,0,0,0.2);
+    z-index: 1;
+    bottom: 100%;
+    right: 0;
+    opacity: .95;
+    text-align: right;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 20px 16px 20px 25px;
+    text-decoration: none;
+    display: block;
+}
+/*
+.dropdown a:hover {background-color: orange;}
+*/
+
+.show {display: block;}
+
+.dropdown{
+    margin-top:0px;
+    position: absolute;
+    bottom:0;
+    width: 100%;
+}
+
+.dropdown li{
+    list-style-type: none;
+}
 }/*@Media 320px-480px-landscape*/
