--- a/css/portfolio_bow_tip.css
+++ b/css/portfolio_bow_tip.css
@@ -5,36 +5,18 @@
 /***********************/
 
 @media (min-width: 896px) and (max-width: 1024px){
-    #bodywrapper{
-        height: 75%;
-    }
-    .gridwrapper_content{
-        margin-top:20%;
-    }
-    .nav li {
-        margin: 0 2em;
-    }
-    .myname{
-        font-size: 3.3em;
-    }
+    #bodywrapper{height: 75%;}
+    .gridwrapper_content{margin-top:20%;}
+    .nav li {margin: 0 2em;}
+    .myname{font-size: 3.3em;}
 } /*max-width 1024px ends*/
 
 @media (min-width: 768px) and (max-width: 896px){
-    #bodywrapper{
-        height: 80%;
-    }
-    .gridwrapper_content{
-        margin-top:30%;
-    }
-    .nav li {
-        margin: 0 1em;
-    }
-    .myname{
-        font-size:2.5em;
-    }
-    .aboutme{
-        margin-right:2em;
-    }
+    #bodywrapper{height: 80%;}
+    .gridwrapper_content{margin-top:30%;}
+    .nav li {margin: 0 1em;}
+    .myname{font-size:2.5em;}
+    .aboutme{margin-right:2em;}
 } /*max-width 1024px ends*/
 
 @media (min-width: 768px) and (max-width: 1024px) {
