--- a/css/portfolio_bow_mp.css
+++ b/css/portfolio_bow_mp.css
@@ -169,14 +169,20 @@ body, html{
 .dropbtn {
     background-color: black;
     color: white;
-    padding: 16px;
-    font-size: 16px;
+    font-size: 20px;
     border: none;
     /*cursor: pointer;*/
     width:100%;
     text-align: right;
     width: 100%;
 }
+
+button {
+    padding: 16px;
+    width: 100%;
+    background-color: black;
+}
+
 /*
 .dropbtn:hover, .dropbtn:focus {
     background-color: pink;
@@ -206,6 +212,8 @@ body, html{
     padding: 20px 16px 20px 25px;
     text-decoration: none;
     display: block;
+    overflow: auto;
+    height: 50px;
 }
 /*
 .dropdown a:hover {background-color: orange;}
