--- a/css/portfolio_bow_mp.css
+++ b/css/portfolio_bow_mp.css
@@ -198,13 +198,14 @@ button {
     position: absolute;
     background-color: white;
     min-width: auto;
-    overflow: auto;
     box-shadow: -1px -1px 25px 0.5px rgba(0,0,0,0.2);
     z-index: 1;
     bottom: 100%;
     right: 0;
     opacity: .95;
-    text-align: right;
+    text-align: right;    
+    overflow: scroll;
+    height: auto;
 }
 
 .dropdown-content a {
@@ -212,8 +213,6 @@ button {
     padding: 20px 16px 20px 25px;
     text-decoration: none;
     display: block;
-    overflow: auto;
-    height: 50px;
 }
 /*
 .dropdown a:hover {background-color: orange;}
