--- a/css/portfolio_bow_mp.css
+++ b/css/portfolio_bow_mp.css
@@ -205,7 +205,7 @@ button {
     opacity: .95;
     text-align: right;    
     overflow: scroll;
-    height: auto;
+    height: 400px;
 }
 
 .dropdown-content a {
