--- a/css/portfolio_bow.css
+++ b/css/portfolio_bow.css
@@ -3,6 +3,11 @@
 /*******/
 /*LINKS*/
 /*******/
+body, html{
+    height: 100%;
+    margin: 0;
+    font-family: Arial,Helvetica Neue,Helvetica,sans-serif; 
+}
 
 /* unvisited link */
 a:link {
@@ -35,17 +40,46 @@ a:active {
 .socialmedia a:hover{
     opacity: .5;
   }
+/*ABOUT ME - CONTACT ME*/
+#contactme_des, #aboutme_des{
+    display: none;
+    width: 80%;
+    /*background-color: pink;*/
+    height: auto;
+    z-index: 0;
+    position: absolute;
+    margin: 0 12.5% 0 7.5%;
+    box-shadow: 1px 1px 10px 3px grey;
+    top:9em;
+}
+
+#header_contact, #contactme_content, #aboutme_content, #close_contact, #close_about, #header_aboutme,#close_aboutme{
+text-align: center;
+background-color: rgba(255, 255, 255,.95);
+}
+
+#aboutme_content{
+    height:200px;
+}
+
+#contactme_content{
+    height:100px;
+}
+
+#header_contact, #close_contact, #close_about{
+    width: 100%;
+    padding: 1em 0;
+    margin: 0;
+    color: white;
+    background-color:rgba(0, 0, 0, 0.85);
+}
+
+
 
 /****************/
 /*DESKTOP-LAPTOP*/
 /****************/
 @media (min-width: 1025px){
-
-body, html{
-    height: 100%;
-    margin: 0;
-    font-family: Arial,Helvetica Neue,Helvetica,sans-serif; 
-}
 
 .my_background{
     background-image: url('../images/redefinebackground.jpg');
@@ -186,11 +220,11 @@ body, html{
     font-weight: bold;
 }
 
-#video, #projects, #logo, #type, #animate, #sound{
+#video, #logo, #type, #animate, #sound{
     border-bottom:solid 2px black;
 }
 
-button.dropbtn{
+button.dropbtn, button{
     display: none;
 }
 }/*@Media (min-width: 1281px)*/
