--- a/css/portfolio_bow_ml.css
+++ b/css/portfolio_bow_ml.css
@@ -18,6 +18,10 @@
         background-size: cover;
     }
     
+    li a:hover{
+        background-color:rgba(128, 128, 128,.5);
+        }
+        
     /*******/
     /*GRID*/
     /*******/
