--- a/css/portfolio_bow_ml.css
+++ b/css/portfolio_bow_ml.css
@@ -144,6 +144,15 @@
         background-color:rgb(211, 211, 211);
         color: black;
     }
+
+    .box.nav.dropdown {
+        padding: 0;
+    }
+
+    .fa{
+        font-size: large!important;
+        /*text-align: center!important;*/
+    }
     
     /*
     .nav{
