--- a/css/portfolio_bow.css
+++ b/css/portfolio_bow.css
@@ -60,6 +60,7 @@ background-color: rgba(255, 255, 255,.95);
 
 #aboutme_content,#contactme_content{
     height:12em;
+    padding: 1em .5em;
 }
 
 #header_contact, #close_contact, #close_about{
@@ -90,10 +91,14 @@ background-color: rgba(255, 255, 255,.95);
     clear: both;
   }
   
+  .row{
+      overflow: scroll;
+      height: 30em;
+  }
   .column {
     float: left;
-    width: 15%;
   }
+
 .page_title{
   text-align:center; 
   padding:2em; 
@@ -237,7 +242,8 @@ background-color: rgba(255, 255, 255,.95);
     left: 0;
     top: 0;
     width: 100%;
-    height: 100%;
+    height: auto;
+    bottom: 0;
 }
 
 #bodywrapper{
@@ -360,7 +366,7 @@ background-color: rgba(255, 255, 255,.95);
     font-weight: bold;
 }
 
-#video, #logo, #type, #animate, #sound{
+#video, #logo, #type, #animate, #sound, #uxui, #wd, #projects{
     border-bottom:solid 2px black;
 }
 
@@ -374,6 +380,11 @@ button.dropbtn, button{
 
 #photos{
     color: blue;
+}
+
+/*******GALLERY*******/
+.column{
+    width: 20%;
 }
 }/*@Media (min-width: 1281px)*/
 
