--- a/css/portfolio_bow.css
+++ b/css/portfolio_bow.css
@@ -193,9 +193,9 @@ background-color: rgba(255, 255, 255,.95);
     top: 0;
   }
   
-  img {
+  /*img {
     margin-bottom: -4px;
-  }
+  }*/
   
   .caption-container {
     text-align: center;
