tablet view adjustment

--- a/css/portfolio_bow_tip.css
+++ b/css/portfolio_bow_tip.css
@@ -164,7 +164,7 @@
         display: none;
     }
     
-    #video, #logo, #type, #animate, #sound{
+    #video, #logo, #type, #animate, #sound, #uxui, #wd, #projects{
         border-bottom:solid 2px black;
     }
 
