--- a/css/portfolio_bow.css
+++ b/css/portfolio_bow.css
@@ -366,7 +366,7 @@ background-color: rgba(255, 255, 255,.95);
     font-weight: bold;
 }
 
-#video, #logo, #type, #animate, #sound, #uxui, #wd, #projects{
+#video, #logo, #type, #animate, #sound, #projects{
     border-bottom:solid 2px black;
 }
 
