--- a/css/portfolio_bow_ml.css
+++ b/css/portfolio_bow_ml.css
@@ -68,9 +68,9 @@
         height: auto;
     }
     
-    .socialmedia img{
-        width:1.5em;
-        padding: .5em;
+    .socialmedia img {
+        width: 2.5em;
+        padding: .5em
     }
     
     .gridwrapper_content{
