--- a/css/portfolio_bow.css
+++ b/css/portfolio_bow.css
@@ -51,6 +51,21 @@ a:active {
     margin: 0 12.5% 0 7.5%;
     box-shadow: 1px 1px 10px 3px grey;
     top:9em;
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 1s;
+    animation-name: animatetop;
+    animation-duration: 1s
+}
+
+/* Add Animation */
+@-webkit-keyframes animatetop {
+    from {top:-10px; opacity:0} 
+    to {top:9em; opacity:1}
+}
+
+@keyframes animatetop {
+    from {top:-10px; opacity:0}
+    to {top:9em; opacity:1}
 }
 
 
@@ -62,7 +77,9 @@ background-color: rgba(255, 255, 255,.95);
 #aboutme_content, #contactme_content {  
     line-height: 1.5em;
     font-size: 15px;
+    padding: 1em 5em;
 }
+
 
 #header_contact, #close_contact, #close_about{
     width: 100%;
@@ -70,6 +87,10 @@ background-color: rgba(255, 255, 255,.95);
     margin: 0;
     color: white;
     background-color:rgba(0, 0, 0, 0.85);
+}
+
+#close_contact, #close_about{
+    cursor: pointer;
 }
 
 
