--- a/css/portfolio_bow.css
+++ b/css/portfolio_bow.css
@@ -78,7 +78,7 @@ background-color: rgba(255, 255, 255,.95);
 #aboutme_content, #contactme_content {  
     line-height: 1.5em;
     font-size: 15px;
-    padding: 1em 5em;
+    padding: 0;
 }
 
 
@@ -247,6 +247,9 @@ background-color: rgba(255, 255, 255,.95);
 /**PROJECT PAGE*/
 .project_container {
     text-align:center;
+    overflow:scroll;
+    overflow-x: auto;
+    height: 100%;
 }
 
 #container{
