--- a/css/portfolio_bow_ml.css
+++ b/css/portfolio_bow_ml.css
@@ -165,6 +165,11 @@
     margin: -5em 3em 0 3em;
 }
 
+#aboutme_content, #contactme_content {
+    height: 7em;
+    padding: 1em;
+}
+
 
     /*
     .nav{
@@ -230,7 +235,7 @@
         opacity: .95;
         text-align: right;    
         overflow: scroll;
-        height: 20em;
+        height: 15em;
     }
     
     .dropdown-content a {
