--- a/css/portfolio_bow.css
+++ b/css/portfolio_bow.css
@@ -50,7 +50,7 @@ a:active {
     position: absolute;
     margin: 0 12.5% 0 7.5%;
     box-shadow: 1px 1px 10px 3px grey;
-    top:10em;
+    top:10;
     -webkit-animation-name: animatetop;
     -webkit-animation-duration: 1s;
     animation-name: animatetop;
