--- a/css/portfolio_bow_mp.css
+++ b/css/portfolio_bow_mp.css
@@ -36,7 +36,7 @@ li a:hover{
 
 #bodywrapper{
     padding:1em;
-    height: auto;
+    height: 100%;
 }
 
 .gridwrapper{
@@ -181,6 +181,21 @@ li a:hover{
     height:13em;
 }
 
+.row{
+    overflow: scroll;
+    height: 100%;
+    overflow-x: auto;
+}
+
+.nav li {
+    display: inline;
+    padding: 1em!important;
+    margin:0!important;
+    font-weight: bold;
+    font-size: 14px;
+    list-style-type: none;
+}
+
 /*
 .nav{
     width: 100%;
@@ -292,10 +307,6 @@ button {
 #slide_1{
     overflow: scroll;
     height: 28em;
-}
-
-.row{
-    height:20em;
 }
 
 .modal{
