--- a/css/portfolio_bow_ml.css
+++ b/css/portfolio_bow_ml.css
@@ -30,12 +30,10 @@
         left: 0;
         top: 0;
         width: 100%;
-        height: 100%;
     }
     
     #bodywrapper{
-        padding:1em;
-        height: 70%;
+        padding:1em 1em 4em 1em;
     }
     
     .gridwrapper{
@@ -75,6 +73,7 @@
     
     .gridwrapper_content{
         grid-row: 2;
+        margin-top:0;
         height: 100%;
         overflow-x: auto;
         overflow: scroll;
@@ -182,7 +181,15 @@
     padding: 1em;
 }
 
-
+/*NAVIGATION*/
+.nav li {
+    display: inline;
+    padding: 1em!important;
+    margin:0!important;
+    font-weight: bold;
+    font-size: 14px;
+    list-style-type: none;
+}
     /*
     .nav{
         width: 100%;
@@ -207,6 +214,13 @@
         border-bottom:solid 2px black;
     }*/
     
+    /*MOBILE NAVIGATION*/
+
+    div#nav_container {
+        bottom: 0;
+        position: fixed;
+        width: 100%;
+    }
     
     .dropbtn {
         background-color: black;
@@ -247,7 +261,7 @@
         opacity: .95;
         text-align: right;    
         overflow: scroll;
-        height: 15em;
+        height: 25em;
     }
     
     .dropdown-content a {
@@ -269,9 +283,10 @@
         width: 100%;
     }
     
+    /*
     .dropdown li{
         list-style-type: none;
-    }
+    }*/
 
 /**********************
 *****PHOTOGRAPHY*******
@@ -287,7 +302,7 @@
 }
 
 .row{
-    height:12em;
+    /*height:12em;*/
 }
 
 .numbertext{
