--- a/css/portfolio_bow.css
+++ b/css/portfolio_bow.css
@@ -7,6 +7,10 @@ body, html{
     height: 100%;
     margin: 0;
     font-family: Arial,Helvetica Neue,Helvetica,sans-serif; 
+    background-image: url(../images/redefinebackground.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 /* unvisited link */
@@ -349,14 +353,14 @@ background-color: rgba(255, 255, 255,.95);
 /*DESKTOP-LAPTOP*/
 /****************/
 @media (min-width: 1025px){
-
+/*
 .my_background{
     background-image: url('../images/redefinebackground.jpg');
     height: 100%;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-}
+}*/
 
 /*******/
 /*GRID*/
