--- a/css/portfolio_bow.css
+++ b/css/portfolio_bow.css
@@ -106,11 +106,11 @@ background-color: rgba(255, 255, 255,.95);
     box-sizing: border-box;
   }
   
-  .row > .column {
-    padding:8px;
+  .row > .column{
+    padding:.4em;
   }
   
-  .row:after {
+  .row:after{
     content: "";
     display: table;
     clear: both;
@@ -276,8 +276,9 @@ background-color: rgba(255, 255, 255,.95);
 
 /* Popup box BEGIN */
 #slide_1{
-    overflow: scroll;
-    height: 45em;
+    height: 35em;
+    overflow-x: auto;
+    padding-bottom: 2em;
 }
 
 .hover_bkgr_fricc, .hover_bkgr_fricc_2{
@@ -577,6 +578,14 @@ button.dropbtn, button{
 .column{
     width: 15%;
 }
+
+/**********************
+*****COFFEINE92 LOGO*******
+**********************/
+#caffeine-logo,#MPC-logo{
+    width:60%
+}
+
 }/*@Media (min-width: 1281px)*/
 
 
