--- a/css/portfolio_bow_tip.css
+++ b/css/portfolio_bow_tip.css
@@ -4,18 +4,18 @@
 /*TABLET-IPAD(portrait)*/
 /***********************/
 
+/*IPAD PORTRAIT control*/
 @media (min-width: 896px) and (max-width: 1024px){
     .gridwrapper_content{margin-top:20%;}
-    /*.nav li {margin: 0 2em;}*/
     .myname{font-size: 3.3em;}
 } /*max-width 1024px ends*/
 
 @media (min-width: 768px) and (max-width: 896px){
     .gridwrapper_content{margin-top:30%;}
-    /*.nav li {margin: 0 1em;}*/
     .myname{font-size:2.5em;}
     .aboutme{margin-right:2em;}
 } /*max-width 1024px ends*/
+/*IPAD PORTRAIT control ENDS*/
 
 @media (min-width: 768px) and (max-width: 1024px) {
     .my_background{
@@ -227,5 +227,12 @@
 #slide_1{
     overflow: scroll;
     height: 50em;
+}
+
+/**************************
+*****COFFEINE92 LOGO*******
+***************************/
+#caffeine-logo,#MPC-logo{
+    width:100%
 }
 }/*@Media 768px-1024px*/
