--- a/css/portfolio_bow.css
+++ b/css/portfolio_bow.css
@@ -314,8 +314,8 @@ background-color: rgba(255, 255, 255,.95);
     width: 100%;
     padding: 1em 0;
     margin: 0;
-    color: white;
-    background-color: rgba(0, 0, 0, 0.85);
+    color: black;
+    background-color: rgba(200, 200, 200, .6);
 }
 .popupCloseButton {
     background-color: #000;
